# FPC-seller_gpt

./: README.md  ai.py  pyproject.toml  requirements.txt  seller_gpt.py
ai_assistant/: README.md
ai_assistant/core/: ai_manager.py  config.py  message_processor.py
ai_assistant/ui/: telegram_handler.py
ai_assistant/utils/: constants.py  lot_fetcher.py
